[package]
name = "fix-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
smallvec = "1.11"

[[bench]]
name = "fix_benchmarks"
harness = false
