[package]
name = "fix-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
itoa = "1.0.15"
time = { version = "0.3", features = ["parsing"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
time = { version = "0.3", features = ["parsing", "macros"] }

[[bench]]
name = "fix_benchmarks"
harness = false

[profile.bench]
debug = true
